single_host/website-route.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: website-gateway
spec:
  selector:
    # Which pods we want to expose as Istio router
    # This label points to the default one installed from file istio-demo.yaml
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    # Here we specify which Kubernetes service names
    # we want to serve through this Gateway
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: website-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - website-gateway
  http:
  - route:
    - destination:
        host: website-service.default.svc.cluster.local
        subset: v1
        port:
          number: 8501
    retries:
      attempts: 3
      perTryTimeout: 60s
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: website-destination-rule
spec:
  host: website-service
  subsets:
  - name: v1
    labels:
      version: green
